apelsin, sesoon, uulits

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,9 +16,9 @@
 			],
 			"env": {
 				"NODE_ENV": "development",
-				"BOT_FB_APP_ID": "275634646107691",
-				"BOT_FB_APP_SECRET": "427892ba6af6db20a2c1e01c85f4452b",
-				"BOT_SLACK_API_KEY": "xoxb-68354631971-RsniBpVM6P4laVHzYyNMBgdC"
+				"BOT_FB_APP_ID": "",
+				"BOT_FB_APP_SECRET": "",
+				"BOT_SLACK_API_KEY": ""
 			},
 			"externalConsole": false,
 			"sourceMaps": false,
